# VulkanLiteRenderer

./: .gitignore  LICENSE  README.md
MT_Renderer/: CMakeLists.txt  main.cpp
MT_Renderer/cmake/: dependencies.cmake
MT_Renderer/code/: CMakeLists.txt  Config.inl  main.cpp
MT_Renderer/code/core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Types.h
MT_Renderer/code/core/rendering/: RenderData.hpp  Renderer.cpp  Renderer.h  Renderer_Opengl.cpp
MT_Renderer/code/enums/: ResourceFlags.h  ThreadStartFlags.h
MT_Renderer/code/platform/: OS_Manager.cpp  OS_Manager.h
MT_Renderer/code/platform/threading/: JobUtils.cpp  JobUtils.h  ThreadUtils.cpp  ThreadUtils.h
MT_Renderer/code/structs/: Commands.h  FreeSlot.h  Job.h  RenderCommand.h  RenderContext.h  WindowCreateParams.h  WindowCreationParams.h
MT_Renderer/include/core/: Application.h  Engine.h
MT_Renderer/include/enums/: PresentationImageType.h  RenderCommands.h  ResourceFlags.h
MT_Renderer/include/materials/: Material.h  ShaderObject.h
MT_Renderer/include/platform/: OS_Manager.h
MT_Renderer/include/platform/threading/: ThreadUtils.h
MT_Renderer/include/render/: Renderer.h
MT_Renderer/include/render/render_utils/: RenderBuffer.hpp  SlotResources.hpp
MT_Renderer/include/renderer/: RenderPassBuilder.h  Renderer.h
MT_Renderer/include/structs/engine/: ApplicationQueueStructs.h  Commands.h  EngineContext.h  FrameContext.h  FreeSlot.h  Job.h  RenderCommand.h  RenderContext.h  WindowCreateParams.h
MT_Renderer/include/structs/vulkan/: GPU_Buffer.h
MT_Renderer/include/vulkanapp/: DeviceManager.h  SwapchainManager.h  VulkanCleanupQueue.h
MT_Renderer/include/vulkanapp/utils/: DescriptorUtils.h  FileUtils.h  ImageUtils.h  MemoryUtils.h  RenderUtils.h  (+1 more)
MT_Renderer/libraries/: glad.c
MT_Renderer/libraries/glad/: glad.h
MT_Renderer/shaders/: triangle.frag.glsl
MT_Renderer/source/core/: Application.cpp  ApplicationQueueFunctions.cpp  Engine.cpp
MT_Renderer/source/materials/: Material.cpp
MT_Renderer/source/platform/: OS_Manager.cpp
MT_Renderer/source/render/: RenderPassBuilder.cpp  Renderer.cpp  RendererVulkan.cpp
MT_Renderer/source/vulkanapp/: DeviceManager.cpp  SwapchainManager.cpp
(+52 files in other folders)
